# onde-estamos

./: BC250_2017_Unidade_Federacao_A.dbf  BC250_2017_Unidade_Federacao_A.shx  pyproject.toml  streamlit_app.py
